syntax = "proto3";

message TestArrayP {
  repeated sint32 int_arr = 1;
}

