syntax = "proto3";

enum Namespace__Class__EnumWithZero {
  Namespace__Class__EnumWithZero_Val0 = 0;
  Namespace__Class__EnumWithZero_Val1 = 1;
  Namespace__Class__EnumWithZero_Val2 = 2;
}

enum EnumWithoutZero {
  EnumWithoutZero_UNKNOWN = 0;
  EnumWithoutZero_Val1 = 1;
  EnumWithoutZero_Val2 = 2;
}

message TestEnumP {
  .Namespace__Class__EnumWithZero Flag1 = 1;
  .EnumWithoutZero Flag2 = 2;
  .EnumWithoutZero Flag3 = 3;
}

