syntax = "proto3";

message TestPrimitiveP {
  sint32 int_var = 1;
  float float_var = 2;
  bool bool_var = 3;
  uint32 unsigned_int_var = 4;
  sint64 long_var = 5;
}

